# mikrokosmos

./: .ghci  .gitignore  Fonts.hs  Makefile  about.md  default.nix  dump  generate-templates.sh  imagined-saviors.cabal  index.hs  index.html  mikrokosmos.cabal  release.nix  shell.nix  site.hs  things-i-like.md
Templates/: Archive.hs  Common.hs  Default.hs  Index.hs  Post.hs  PostList.hs  archive.hs  default.hs  post-list.hs
Templates/Internal/: Common.hs
css/: iosevka.css  main.hs  reset.css  style.css  style.hs
drafts/: category-theory-introduction.md  hello-hakyll.md  instance-resolution-fundeps.md  learning-bound.lhs  p-adics.md  scoped-ty-vars.md  subtyping-hack-lens.md  the-language-of-categories.md  type-level-haskell.md  variance-and-subtyping-in-haskell.md  xypic-showoff.md
lucid/: default.hs  post-list.hs  post.hs
posts/: Bound.lhs  category-theory-introduction.md  hello-hakyll.md  lipsum.md  writing-my-own-css.md
src/: Site.hs
templates/: Archive.html  Default.html  Index.html  PostList.html  archive.html  default.html  post-list.html  post.html
