name:               mikrokosmos
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 2.0.0.0

executable mikrokosmos
  main-is:          src/Site.hs
  build-depends:    base == 4.*
                  , hakyll
                  , clay
                  , filepath
                  , lucid
                  , type-of-html
                  , text
                  , binary
  ghc-options:      -threaded
  default-language: Haskell2010
